--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="col align-self-center text-center">
         <img class="img-fluid" alt="Mechanical Tiger Logo" src="mechanical-tiger.jpg" style="width: 20%">
         <!-- <h1 class="display-1 text-center">Remote Academia</h1> -->
-        <h1 class="display-3 text-center alert">2022-09-22 3PM: OUTAGE RESOLVED</h1>
+        <!-- h1 class="display-3 text-center alert">2022-09-22 3PM: OUTAGE RESOLVED</h1 -->
       </div>
     </div>
   </div>
